--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.0"
