--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,20 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "description": "Todo list app for ColmanDevClub",
+  "main": "src/server.js",
+  "type": "module",
+  "scripts": {
+    "dev": "nodemon src/server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "fastify": "^3.29.0",
-    "fastify-autoload": "^3.13.0",
-    "fastify-swagger": "^5.2.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "http-status-codes": "^2.2.0",
+    "nodemon": "^2.0.16",
     "pg": "^8.7.3"
   }
 }
