--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.1",
     "http-status-codes": "^2.2.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3"
