--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
     "http-status-codes": "^2.2.0",
-    "pg": "^8.7.3"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "sequelize": "^6.20.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
